--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@animoca/template-ethereum-contracts",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "description",
   "author": "author",
   "license": "MIT",
@@ -26,14 +26,14 @@
     "coverage": "cross-env COVERAGE=true hardhat coverage --show-stack-traces",
     "docgen:sol": "hardhat docgen --show-stack-traces",
     "docgen": "run-s docgen:sol",
-    "clean:vscode": "rm -rf .vscode/extensions.json .vscode/launch.json .vscode/settings.json || :",
-    "clean:compile": "rm -rf cache || :",
-    "clean:artifacts:soft": "find artifacts/* | grep -v '^artifacts/build-info\\|^artifacts/contracts' | xargs rm -rf || :",
-    "clean:artifacts:hard": "rm -rf artifacts || :",
-    "clean:hardhat": "rm -rf hardhat.config.last.json || :",
-    "clean:flatten": "rm -rf flattened || :",
-    "clean:coverage": "rm -rf coverage coverage.json *.coverage || :",
-    "clean:doc": "rm -rf docs || :",
+    "clean:vscode": "rm -rf \".vscode/extensions.json\" \".vscode/launch.json\" \".vscode/settings.json\"",
+    "clean:compile": "rm -rf \"cache\"",
+    "clean:artifacts:soft": "find \"artifacts/*\" | grep -v '^artifacts/build-info\\|^artifacts/contracts' | xargs rm -rf",
+    "clean:artifacts:hard": "rm -rf \"artifacts\"",
+    "clean:hardhat": "rm -rf \"hardhat.config.last.json\"",
+    "clean:flatten": "rm -rf \"flattened\"",
+    "clean:coverage": "rm -rf \"coverage\" \"coverage.json\" \"*.coverage\"",
+    "clean:doc": "rm -rf \"docs\"",
     "clean": "run-p clean:compile clean:artifacts:soft clean:hardhat clean:flatten clean:coverage clean:doc",
     "run-all": "run-s format fix clean clean:artifacts:hard compile docgen flatten test-p coverage",
     "prepack": "run-s clean:artifacts:hard compile clean"
@@ -43,30 +43,29 @@
     "@animoca/ethereum-contracts": "=1.1.1",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-    "@nomiclabs/hardhat-ethers": "^2.2.2",
-    "@openzeppelin/contracts": "=4.8.2",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@openzeppelin/contracts": "^4.9.1",
     "chai": "^4.3.7",
     "cross-env": "^7.0.3",
-    "eslint": "^8.37.0",
+    "eslint": "^8.42.0",
     "eslint-config-mocha": "^0.0.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "^5.7.2",
     "fs-extra": "^11.1.1",
-    "glob": "^9.3.4",
-    "hardhat": "^2.13.0",
-    "hardhat-deploy": "^0.11.25",
+    "glob": "^10.2.7",
+    "hardhat": "^2.15.0",
+    "hardhat-deploy": "^0.11.30",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "hardhat-gas-reporter": "^1.0.9",
     "keccak256": "^1.0.6",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
     "lodash.mergewith": "^4.6.2",
-    "merkletreejs": "^0.3.9",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.4.1",
     "solhint-plugin-prettier": "^0.0.5",
