--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@animoca/template-ethereum-contracts",
-  "version": "0.0.6",
+  "version": "0.0.6-rc.0",
   "description": "description",
   "author": "author",
   "license": "MIT",
@@ -39,26 +39,25 @@
     "prepack": "run-s clean:artifacts:hard compile clean"
   },
   "devDependencies": {
-    "@animoca/ethereum-contract-helpers": "^0.0.4",
-    "@animoca/ethereum-contracts": "=1.1.1",
+    "@animoca/ethereum-contract-helpers": "^0.0.6",
+    "@animoca/ethereum-contracts": "=3.0.0-rc.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@openzeppelin/contracts": "^4.9.1",
-    "chai": "^4.3.7",
+    "@openzeppelin/contracts": "^4.9.3",
+    "chai": "^4.3.8",
     "cross-env": "^7.0.3",
-    "eslint": "^8.42.0",
+    "eslint": "^8.46.0",
     "eslint-config-mocha": "^0.0.0",
-    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "ethers": "^5.7.2",
+    "ethers": "=5.7.2",
     "fs-extra": "^11.1.1",
-    "glob": "^10.2.7",
-    "hardhat": "^2.15.0",
-    "hardhat-deploy": "^0.11.30",
+    "glob": "^10.3.3",
+    "hardhat": "^2.17.1",
+    "hardhat-deploy": "^0.11.37",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
-    "hardhat-gas-reporter": "^1.0.9",
     "keccak256": "^1.0.6",
     "lodash.clonedeep": "^4.5.0",
     "lodash.isequal": "^4.5.0",
@@ -67,9 +66,9 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
-    "solhint": "^3.4.1",
+    "solhint": "^3.6.2",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.8.2",
-    "solidity-docgen": "^0.6.0-beta.35"
+    "solidity-coverage": "^0.8.4",
+    "solidity-docgen": "^0.6.0-beta.36"
   }
 }
