update to latest dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@animoca/template-ethereum-contracts",
-  "version": "0.0.6-rc.1",
+  "version": "0.0.6-rc.2",
   "description": "description",
   "author": "author",
   "license": "MIT",
@@ -32,7 +32,7 @@
     "clean:artifacts:hard": "rm -rf \"artifacts\"",
     "clean:hardhat": "rm -rf \"hardhat.config.last.json\"",
     "clean:flatten": "rm -rf \"flattened\"",
-    "clean:coverage": "rm -rf \"coverage\" \"coverage.json\" \"*.coverage\"",
+    "clean:coverage": "rm -rf coverage coverage.json artifacts.coverage cache.coverage",
     "clean:doc": "rm -rf \"docs\"",
     "clean": "run-p clean:compile clean:artifacts:soft clean:hardhat clean:flatten clean:coverage clean:doc",
     "run-all": "run-s format fix clean clean:artifacts:hard compile docgen flatten test-p coverage",
@@ -40,22 +40,22 @@
   },
   "devDependencies": {
     "@animoca/ethereum-contract-helpers": "^0.0.6",
-    "@animoca/ethereum-contracts": "=3.0.0-rc.0",
+    "@animoca/ethereum-contracts": "=3.0.0-rc.4",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@openzeppelin/contracts": "^4.9.3",
     "chai": "^4.3.8",
     "cross-env": "^7.0.3",
-    "eslint": "^8.46.0",
+    "eslint": "^8.49.0",
     "eslint-config-mocha": "^0.0.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-mocha": "^10.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "ethers": "=5.7.2",
     "fs-extra": "^11.1.1",
-    "glob": "^10.3.3",
-    "hardhat": "^2.17.1",
+    "glob": "^10.3.4",
+    "hardhat": "^2.17.3",
     "hardhat-deploy": "^0.11.37",
     "hardhat-deploy-ethers": "^0.3.0-beta.13",
     "keccak256": "^1.0.6",
