--- a/package.json
+++ b/package.json
@@ -39,36 +39,31 @@
     "prepack": "run-s clean:artifacts:hard compile clean"
   },
   "devDependencies": {
-    "@animoca/ethereum-contract-helpers": "^0.0.6",
-    "@animoca/ethereum-contracts": "=3.0.0-rc.4",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+    "@animoca/ethereum-contract-helpers": "^1.0.1",
+    "@animoca/ethereum-contracts": "3.0.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
+    "@nomicfoundation/hardhat-ethers": "^3.0.4",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@openzeppelin/contracts": "^4.9.3",
-    "chai": "^4.3.8",
+    "chai": "^4.3.10",
     "cross-env": "^7.0.3",
-    "eslint": "^8.49.0",
+    "eslint": "^8.52.0",
     "eslint-config-mocha": "^0.0.0",
     "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-mocha": "^10.2.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "ethers": "=5.7.2",
-    "fs-extra": "^11.1.1",
-    "glob": "^10.3.4",
-    "hardhat": "^2.17.3",
-    "hardhat-deploy": "^0.11.37",
-    "hardhat-deploy-ethers": "^0.3.0-beta.13",
+    "ethers": "^6.8.0",
+    "hardhat": "^2.18.3",
+    "hardhat-deploy": "^0.11.43",
+    "hardhat-deploy-ethers": "^0.4.1",
     "keccak256": "^1.0.6",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.isequal": "^4.5.0",
-    "lodash.mergewith": "^4.6.2",
     "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.1.3",
     "solhint": "^3.6.2",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.8.4",
+    "solidity-coverage": "^0.8.5",
     "solidity-docgen": "^0.6.0-beta.36"
   }
 }
