--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@animoca/template-ethereum-contracts",
-  "version": "0.0.6-rc.2",
+  "version": "0.0.6",
   "description": "description",
   "author": "author",
   "license": "MIT",
@@ -39,7 +39,7 @@
     "prepack": "run-s clean:artifacts:hard compile clean"
   },
   "devDependencies": {
-    "@animoca/ethereum-contract-helpers": "^1.0.1",
+    "@animoca/ethereum-contract-helpers": "^1.0.2",
     "@animoca/ethereum-contracts": "3.0.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
     "@nomicfoundation/hardhat-ethers": "^3.0.4",
