update to latest tooling versions

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@animoca/template-ethereum-contracts",
-  "version": "0.0.6",
+  "version": "1.0.0",
   "description": "description",
   "author": "author",
   "license": "MIT",
@@ -10,15 +10,12 @@
   },
   "scripts": {
     "postinstall": "bash -c 'for cfg in .vscode/settings.json .vscode/extensions.json .vscode/launch.json; do cp -n ${cfg}.default ${cfg} || :; done'",
-    "lint:js": "eslint \"**/*.{js,ts}\"",
-    "lint:sol": "solhint \"contracts/**/*.sol\"",
+    "lint:js": "prettier '**/*.{js,ts}' --check && eslint '**/*.{js,ts}'",
+    "lint:js:fix": "prettier '**/*.{js,ts}' --write && eslint '**/*.{js,ts}' --fix",
+    "lint:sol": "prettier 'contracts/**/*.sol' --check && solhint 'contracts/**/*.sol'",
+    "lint:sol:fix": "prettier 'contracts/**/*.sol' --write && solhint --fix --noPrompt 'contracts/**/*.sol'",
     "lint": "run-s lint:js lint:sol",
-    "fix:js": "eslint --fix \"**/*.{js,ts}\"",
-    "fix:sol": "solhint --fix \"contracts/**/*.sol\"",
-    "fix": "run-s fix:js fix:sol",
-    "format:js": "prettier --write \"**/*.{ts,js}\"",
-    "format:sol": "prettier --write \"**/*.sol\"",
-    "format": "run-s format:js format:sol",
+    "lint:fix": "run-s lint:js:fix lint:sol:fix",
     "compile": "hardhat compile --show-stack-traces",
     "flatten": "hardhat flatten-all --show-stack-traces",
     "test": "hardhat test --show-stack-traces",
@@ -33,37 +30,71 @@
     "clean:hardhat": "rm -rf \"hardhat.config.last.json\"",
     "clean:flatten": "rm -rf \"flattened\"",
     "clean:coverage": "rm -rf coverage coverage.json artifacts.coverage cache.coverage",
-    "clean:doc": "rm -rf \"docs\"",
-    "clean": "run-p clean:compile clean:artifacts:soft clean:hardhat clean:flatten clean:coverage clean:doc",
-    "run-all": "run-s format fix clean clean:artifacts:hard compile docgen flatten test-p coverage",
+    "clean:docgen": "rm -rf \"docs\"",
+    "clean": "run-p clean:compile clean:artifacts:soft clean:hardhat clean:flatten clean:coverage clean:docgen",
+    "run-all": "run-s clean clean:artifacts:hard lint:fix compile docgen flatten test-p coverage",
     "prepack": "run-s clean:artifacts:hard compile clean"
   },
   "devDependencies": {
-    "@animoca/ethereum-contract-helpers": "^1.0.2",
-    "@animoca/ethereum-contracts": "3.0.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.2",
-    "@nomicfoundation/hardhat-ethers": "^3.0.4",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.9",
-    "@openzeppelin/contracts": "^4.9.3",
-    "chai": "^4.3.10",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.52.0",
+    "@animoca/ethereum-contract-helpers": "^1.0.5",
+    "@animoca/ethereum-contracts": "=4.1.3",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
+    "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
+    "@openzeppelin/contracts": "^5.2.0",
+    "chai": "^4.5.0",
+    "eslint": "^9.23.0",
     "eslint-config-mocha": "^0.0.0",
-    "eslint-config-prettier": "^8.9.0",
-    "eslint-plugin-mocha": "^10.2.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "ethers": "^6.8.0",
-    "hardhat": "^2.18.3",
-    "hardhat-deploy": "^0.11.43",
-    "hardhat-deploy-ethers": "^0.4.1",
-    "keccak256": "^1.0.6",
-    "mocha": "^10.2.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8",
-    "prettier-plugin-solidity": "^1.1.3",
-    "solhint": "^3.6.2",
-    "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.8.5",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-mocha": "^10.5.0",
+    "eslint-plugin-prettier": "^5.2.5",
+    "ethers": "^6.13.5",
+    "hardhat": "^2.22.19",
+    "hardhat-deploy": "^1.0.1",
+    "hardhat-deploy-ethers": "^0.4.2",
+    "mocha": "^11.1.0",
+    "prettier": "^3.5.3",
+    "prettier-plugin-solidity": "^1.4.2",
+    "solhint": "^5.0.5",
+    "solhint-plugin-prettier": "^0.1.0",
+    "solidity-coverage": "^0.8.14",
     "solidity-docgen": "^0.6.0-beta.36"
+  },
+  "resolutions": {
+    "**/@ethersproject/abi": "^5.8.0",
+    "**/@ethersproject/abstract-provider": "^5.8.0",
+    "**/@ethersproject/abstract-signer": "^5.8.0",
+    "**/@ethersproject/address": "^5.8.0",
+    "**/@ethersproject/base64": "^5.8.0",
+    "**/@ethersproject/basex": "^5.8.0",
+    "**/@ethersproject/bignumber": "^5.8.0",
+    "**/@ethersproject/bytes": "^5.8.0",
+    "**/@ethersproject/constants": "^5.8.0",
+    "**/@ethersproject/contracts": "^5.8.0",
+    "**/@ethersproject/hash": "^5.8.0",
+    "**/@ethersproject/hdnode": "^5.8.0",
+    "**/@ethersproject/json-wallets": "^5.8.0",
+    "**/@ethersproject/keccak256": "^5.8.0",
+    "**/@ethersproject/logger": "^5.8.0",
+    "**/@ethersproject/networks": "^5.8.0",
+    "**/@ethersproject/pbkdf2": "^5.8.0",
+    "**/@ethersproject/properties": "^5.8.0",
+    "**/@ethersproject/providers": "^5.8.0",
+    "**/@ethersproject/random": "^5.8.0",
+    "**/@ethersproject/rlp": "^5.8.0",
+    "**/@ethersproject/sha2": "^5.8.0",
+    "**/@ethersproject/signing-key": "^5.8.0",
+    "**/@ethersproject/solidity": "^5.8.0",
+    "**/@ethersproject/strings": "^5.8.0",
+    "**/@ethersproject/transactions": "^5.8.0",
+    "**/@ethersproject/units": "^5.8.0",
+    "**/@ethersproject/wallet": "^5.8.0",
+    "**/@ethersproject/web": "^5.8.0",
+    "**/@ethersproject/wordlists": "^5.8.0",
+    "**/@openzeppelin/contracts": "^4.9.6",
+    "**/@openzeppelin/contracts-upgradeable": "^4.9.6",
+    "**/axios": "^0.30.0",
+    "**/cookie": "^0.7.2",
+    "**/elliptic": "^6.6.1"
   }
 }
